Edit page updated

--- a/todolist_app/templates/edit.html
+++ b/todolist_app/templates/edit.html
@@ -21,5 +21,6 @@
           </form>
        {% else %}
           <p>Access Restricted, You Are Not Allowed</p>
+       {% endif %}
     </div>
 {% endblock content %}
